--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - db
+    env_file:
+      - .env
     environment:
       - PORT=8080
       - PG_USER=postgres
