--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.livereload
     depends_on:
       - db
     env_file:
@@ -18,6 +18,8 @@ services:
       - PG_DB=youanno
     ports:
       - "8080:8080"
+    volumes:
+      - .:/usr/src/app
   db:
     image: postgres:12-alpine
     environment:
