--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - PG_PASSWORD=postgres
       - PG_HOST=db
       - PG_PORT=5432
-      - PG_DB=youanno
+      - PG_DB=timecodes_db
     ports:
       - "8080:8080"
     volumes:
@@ -25,6 +25,6 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=youanno
+      - POSTGRES_DB=timecodes_db
     ports:
       - 9000:5432
