Use air docker image to speed up the build

--- a/Dockerfile.livereload
+++ b/Dockerfile.livereload
@@ -1,11 +1,6 @@
-FROM golang:alpine AS builder
+FROM cosmtrek/air
 
 ENV APP_HOME=/usr/src/app
-
-RUN apk update \
-    && apk upgrade \
-    && apk add --upgrade git \
-    && rm -rf /var/cache/apk/*
 
 RUN mkdir -p $APP_HOME
 
@@ -16,8 +11,6 @@ COPY go.mod go.sum $APP_HOME/
 RUN go mod download
 
 COPY . $APP_HOME
-
-RUN go get github.com/cosmtrek/air
 
 CMD ["/go/bin/air", "-c", ".air.conf"]
 
