--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,29 @@
-version: '3'
+version: "3.5"
 
 services:
-  app:
+  app_dev:
     build:
       context: .
-      dockerfile: Dockerfile.livereload
+      dockerfile: Dockerfile.dev
     depends_on:
       - db
     env_file:
       - .env
-    environment:
-      - PORT=8080
-      - PG_USER=postgres
-      - PG_PASSWORD=postgres
-      - PG_HOST=db
-      - PG_PORT=5432
-      - PG_DB=timecodes_db
     ports:
       - "8080:8080"
     volumes:
       - .:/usr/src/app
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: final
+    depends_on:
+      - db
+    env_file:
+      - .env
+    ports:
+      - "8080:8080"
   db:
     image: postgres:12-alpine
     environment:
