--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - .:/usr/src/app
   app:
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
@@ -32,3 +33,11 @@ services:
       - POSTGRES_DB=timecodes_db
     ports:
       - 9000:5432
+  nginx:
+    restart: always
+    build:
+      context: ./nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - app
