--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - 9000:5432
   nginx:
     image: nginx:latest
-    restart: always
+    restart: on-failure
     ports:
       - "80:80"
       - "443:443"
