--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     depends_on:
       - db
       - nginx
+      - certbot
     env_file:
       - .env
     ports:
@@ -36,7 +37,7 @@ services:
       - 9000:5432
   nginx:
     image: nginx:latest
-    restart: always
+    restart: on-failure
     ports:
       - "80:80"
       - "443:443"
