Fix repository tests

--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,10 @@
+APP_ENV=test
 PORT=8080
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_HOST=db
 PG_PORT=5432
-PG_DB=timecodes_db_test
+
+POSTGRES_DB=timecodes_test
 
 GOOGLE_API_KEY=
