--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
+APP_ENV=development
 PORT=8080
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_HOST=db
 PG_PORT=5432
-PG_DB=timecodes_db
+
+POSTGRES_DB=timecodes_development
 
 GOOGLE_API_KEY=
