--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -22,4 +22,14 @@ jobs:
           cp .env.example .env
           docker-compose build app_test
       - name: Run tests
-        run: docker-compose run app_test go test ./... -cover
+        run: docker-compose run app_test go test ./... -covermode=count -coverprofile=coverage.out
+      - name: Convert coverage to lcov
+        uses: jandelgado/gcov2lcov-action@v1.0.2
+        with:
+            infile: coverage.out
+            outfile: coverage.lcov
+      - name: Coveralls
+        uses: coverallsapp/github-action@v1.0.2
+        with:
+            github-token: ${{ secrets.github_token }}
+            path-to-lcov: coverage.lcov
