--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -29,7 +29,7 @@ jobs:
             infile: coverage.out
             outfile: coverage.lcov
       - name: Coveralls
-        uses: coverallsapp/github-action@v1.0.2
+        uses: coverallsapp/github-action@master
         with:
             github-token: ${{ secrets.github_token }}
             path-to-lcov: coverage.lcov
