--- a/.env.test
+++ b/.env.test
@@ -1,10 +1,10 @@
-APP_ENV=development
+APP_ENV=test
 PORT=8080
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_HOST=db
 PG_PORT=5432
 
-POSTGRES_DB=timecodes_development
+POSTGRES_DB=timecodes_test
 
 GOOGLE_API_KEY=
