--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -15,17 +15,21 @@ jobs:
     steps:
       - name: Checkout current branch
         uses: actions/checkout@master
-      - name: Cache
-        uses: actions/cache@v1
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-      - uses: actions/setup-go@v1
-        with:
-          go-version: '1.13'
-      - name: Run go test
+      - name: docker-compose version
+        run: docker-compose --version
+      - name: Build docker image
         run: |
-          go mod download
-          go test ./... -cover
+          cp .env.example .env
+          docker-compose build app_test
+      - name: Run tests
+        run: docker-compose run app_test go test ./... -covermode=count -coverprofile=coverage.out
+      - name: Convert coverage to lcov
+        uses: jandelgado/gcov2lcov-action@v1.0.2
+        with:
+            infile: coverage.out
+            outfile: coverage.lcov
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+            github-token: ${{ secrets.github_token }}
+            path-to-lcov: coverage.lcov
