--- a/.github/workflows/essential_checks.yml
+++ b/.github/workflows/essential_checks.yml
@@ -1,5 +1,11 @@
-name: Run PR checks
-on: [pull_request]
+name: Essential checks
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   lint:
     runs-on: ubuntu-latest
