--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
 version: "3.5"
 
 services:
+  app_base:
+    build:
+      context: .
+      dockerfile: Dockerfile.base
   app_test:
     build:
       context: .
       dockerfile: Dockerfile
-      target: builder
+      target: base
     depends_on:
       - db
     environment:
       - CGO_ENABLED=0
     env_file:
       - .env.test
-    ports:
-      - "8080:8080"
     volumes:
-      - .:/usr/src/app
+      - ./tmp:/usr/src/app/tmp
   app_dev:
     build:
       context: .
