Simplify docker images

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,7 +2,7 @@
 
 .dockerignore
 .env
-.env.example
+.env.*
 .git
 .gitignore
 
@@ -22,3 +22,8 @@ tmp/*
 .vscode
 
 README.md
+
+.golangci.yml
+
+support/golangcilint/errcheck_safelist.txt
+support/build_and_push_base_image.rb
