Use base docker image for CI (#12)
* Use base docker image

Enable docker cache

Fix

* Simplify docker images

* Add gh action for rebuilding base image

* Fix dockerignore

* Fix lint command

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,12 +2,12 @@
 
 .dockerignore
 .env
-.env.example
+.env.*
 .git
 .gitignore
 
 Dockerfile
-Dockerfile.dev
+Dockerfile.*
 docker-compose.yml
 
 log/*
@@ -17,3 +17,8 @@ tmp/*
 !tmp/.keep
 
 .air.conf
+
+.github
+.vscode
+
+README.md
