--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,8 @@ PG_PASSWORD=postgres
 PG_HOST=db
 PG_PORT=5432
 
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=timecodes_test
 
 GOOGLE_API_KEY=
