--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           docker network create traefik-public
           docker-compose build --pull app_test
       - name: Run tests
-        run: docker-compose run --rm app_test sh -c "./support/test.sh"
+        run: docker-compose run --rm app_test go test ./... -covermode=count -coverprofile=tmp/coverage.out
       - name: Convert coverage to lcov
         uses: jandelgado/gcov2lcov-action@v1.0.2
         with:
@@ -56,18 +56,15 @@ jobs:
     steps:
       - name: Connect by ssh and rebuild docker image
         uses: appleboy/ssh-action@master
-        env:
-          DEPLOY_PASSWORD: ${{ secrets.PASSWORD }}
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           passphrase: ${{ secrets.PASSPHRASE }}
           key: ${{ secrets.PRIVATE_KEY }}
-          envs: DEPLOY_PASSWORD
           script: |
             cd /home/deploy/applications/timecodes/timecodes-api
             git fetch --all
             git reset --hard origin/master
-            export $(egrep -v '^#' .env.production | xargs)
+            dotenvp
             docker-compose -f docker-compose.prod.yml pull app
             docker-compose -f docker-compose.prod.yml up -d
