--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,4 +67,4 @@ jobs:
             git reset --hard origin/master
             export $(egrep -v '^#' .env.production | xargs)
             docker-compose pull app
-            docker-compose up -d
+            docker-compose up -d app
