Enable gci and gocyclo linters

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -179,6 +179,8 @@ linters-settings:
     # enable or disable analyzers by name
     enable:
       - atomicalign
+      - gci
+      - gocyclo
     enable-all: false
     disable:
       - shadow
